--- a/components/GolestanMap/GolestanMap.module.css
+++ b/components/GolestanMap/GolestanMap.module.css
@@ -188,9 +188,9 @@
 }
 
 .statusBadge {
-  position: absolute;
+  /* position: absolute;
   top: 10px;
-  left: 10px;
+  left: 10px; */
   padding: 0.4rem 0.8rem;
   border-radius: 8px;
   font-size: 0.85rem;
