--- a/components/DashboardKarbar/DashboardKarbar.module.css
+++ b/components/DashboardKarbar/DashboardKarbar.module.css
@@ -218,13 +218,13 @@
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.06);
   padding: 2rem;
   margin-bottom: 2rem;
-  transition: transform 0.3s, box-shadow 0.3s;
+  /* transition: transform 0.3s, box-shadow 0.3s; */
 }
 
-.content > *:hover {
+/* .content > *:hover {
   transform: translateY(-4px);
   box-shadow: 0 16px 32px rgba(0, 0, 0, 0.1);
-}
+} */
 
 /* ANIMATIONS */
 @keyframes slideDown {
